# hypermat

./: CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
hypermat/: __init__.py
hypermat/_ad/: __init__.py  _deformation.py  _variable.py
hypermat/_calibration/: __init__.py  _load.py  _utils.py
hypermat/_math/: __init__.py  _tensor.py
hypermat/_models/: __init__.py  _energy.py  _hyperelastic_models.py  _material.py  _models.py  _strain_energy.py  _utils.py
