[project]
name = "hypermat"
version = "0.0.3"
description = "Hyperelastic formulations using an algorithmic differentiation with hyper-dual numbers in Python"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = [
  "python", 
  "constitution",
  "scientific-computing",
  "fem",
  "finite-elements-analysis",
  "hyperelasticity", 
]

authors = [
  {email = "mohamed.zaaraoui.999@gmail.com"},
  {name = "Mohamed ZAARAOUI"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]

dependencies = [
  "numpy",
]

[project.urls]
homepage = "https://hypermat.readthedocs.io/en/latest"
code = "https://github.com/ZAARAOUI999/hypermat"
issues = "https://github.com/ZAARAOUI999/hypermat/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
